Update 'backend-tests-go-mcsqywnv' component image to: quay.io/rhtap_qe/backend-tests-go-mcsqywnv:77ab71b139c1190e6f9719c72ce1fa1af1cd3874@sha256:f2041b1cb36e233efacf4f8a69d4bf890e5b3c76db977a724b735d88cc1af748

--- a/components/backend-tests-go-mcsqywnv/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-mcsqywnv/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-mcsqywnv
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-mcsqywnv:77ab71b139c1190e6f9719c72ce1fa1af1cd3874@sha256:f2041b1cb36e233efacf4f8a69d4bf890e5b3c76db977a724b735d88cc1af748
+          name: container-image
